--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "biome check",
-    "format": "biome format --write"
+    "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.0.1",
@@ -43,6 +42,7 @@
     "@trpc/client": "^11.7.2",
     "@trpc/server": "^11.7.2",
     "@trpc/tanstack-react-query": "^11.7.2",
+    "ai": "^5.0.108",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "client-only": "^0.0.1",
@@ -50,6 +50,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "inngest": "^3.46.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
@@ -71,6 +72,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "inngest-cli": "^1.14.3",
     "prisma": "^7.0.1",
     "tailwindcss": "^4",
     "tsx": "^4.21.0",
