--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
     "inngest": "^3.46.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
-    "next": "16.0.6",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.5",
     "random-word-slugs": "^0.1.7",
     "react": "19.2.0",
     "react-day-picker": "^9.11.3",
