--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "embla-carousel-react": "^8.6.0",
     "inngest": "^3.46.0",
     "input-otp": "^1.4.2",
+    "jotai": "^2.16.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
