--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@trpc/client": "^11.7.2",
     "@trpc/server": "^11.7.2",
     "@trpc/tanstack-react-query": "^11.7.2",
+    "@types/toposort": "^2.0.7",
     "@xyflow/react": "^12.10.0",
     "ai": "^5.0.108",
     "better-auth": "^1.4.5",
@@ -57,6 +58,7 @@
     "inngest": "^3.46.0",
     "input-otp": "^1.4.2",
     "jotai": "^2.16.0",
+    "ky": "^1.14.1",
     "lucide-react": "^0.555.0",
     "next": "^16.0.8",
     "next-themes": "^0.4.6",
@@ -73,6 +75,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.6",
     "tailwind-merge": "^3.4.0",
+    "toposort": "^2.0.2",
     "vaul": "^1.1.2",
     "zod": "^4.1.13"
   },
