--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "ngrok:dev": "ngrok http 3000"
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.44",
